# dynet-dao

./: CMakeLists.txt  README.md  get_traces.sh  process.ipynb
dao/docs/: design.md
dao/include/DAO/: DAO.h  allocator.h  engine.h  executor.h  generator.h  globals.h  interface-dynet.h  memory_manager.h  profiler.h  utils.h
dao/src/: allocator.cc  engine.cc  executor.cc  generator.cc  globals.cc  interface-dynet.cc  memory_manager.cc  offload_executor.cc  profiler.cc  utils.cc
dao/testing/dao-simulator/: CMakeLists.txt  allocator.cc  allocator.h  analysis.ipynb  cmd.sh  devices.h  globals.h  kernel.h  main.py  memory_manager.cc  memory_manager.h  readme.md  simulator.cc
dao/testing/dao-simulator/testing/: bandwidth.cpp
dao/testing/dao_actual_memory/: CMakeLists.txt  allocator.cc  allocator.h  cuda.cu  cuda.h  devices.h  exeuctor.cu  kernel.h  memory_manager.cc  memory_manager.h  simulator.cc
dao/tests/: CMakeLists.txt  dao_xor.cc  forward_test.cc  test_allocator.cc  test_seq2seq.cc  test_shared_ptr  test_shared_ptr.cc  test_storage.cc  training_test.cc
dynet/: CMakeLists.txt  cuda.cc  devices.cc  dynet.cc  dynet.h  exec.cc  expr.cc  expr.h  init.cc  io.cc  io.h  model.cc  model.h  param-nodes.cc  param-nodes.h  shadow-params.cc  tensor.cc  tensor.h  training.cc  training.h
examples/: CMakeLists.txt
examples/gpt2/: CMakeLists.txt  common.cpp  common.h  data-utils.h  def.h  gen_script.py  layers.h  transformer-decode.cc  transformer-lm.cc  transformer-lm.h
examples/mnist/: train_mnist.cc
models/gpt2-124M/: hparams.ini
models/gpt2-1558M/: hparams.ini
models/gpt2-355M/: hparams.ini
models/gpt2-774M/: hparams.ini
models/iwslt-envi/: config.txt
models/iwslt-envi/lm/: config.txt
